// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Default story renders snapshot 1`] = `
<div
  class="p-5"
>
  <article
    class="card"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> Dragging story renders snapshot 1`] = `
<div
  class="p-5"
>
  <article
    class="card card--dragging"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> Horizontal story renders snapshot 1`] = `
<div
  class="p-5"
>
  <article
    class="card card--horizontal"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Card /> Raised story renders snapshot 1`] = `
<div
  class="p-5"
>
  <article
    class="card card--raised"
  >
    <header
      class="card__header"
    >
      <div
        class="fpo"
      >
        Card Header
      </div>
    </header>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <footer
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </footer>
  </article>
</div>
`;
